--- a/.github/workflows/add-issues-to-project.yaml
+++ b/.github/workflows/add-issues-to-project.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   add-new-issues-to-backlog:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Install hub
         run: |
