--- a/.github/workflows/require-pr-porting-labels.yaml
+++ b/.github/workflows/require-pr-porting-labels.yaml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   check-pr-porting-labels:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Install hub
         run: |
