--- a/.github/workflows/snap-release.yaml
+++ b/.github/workflows/snap-release.yaml
@@ -5,7 +5,7 @@ on:
       - '2.*'
 jobs:
   release-snap:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
