--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -2,7 +2,7 @@ name: snap CI
 on: ["pull_request"]
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:
       - name: Check out
         uses: actions/checkout@v2
