--- a/.github/workflows/snap-release.yaml
+++ b/.github/workflows/snap-release.yaml
@@ -5,7 +5,7 @@ on:
       - '2.*'
 jobs:
   release-snap:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build snap
         run: |
-          sudo apt-get install -y git git-extras
+          sudo yum install -y git git-extras
           kata_url="https://github.com/kata-containers/kata-containers"
           latest_version=$(git ls-remote --tags ${kata_url}  | egrep -o "refs.*" | egrep -v "\-alpha|\-rc|{}" | egrep -o "[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+" | sort -V -r | head -1)
           current_version="$(echo ${GITHUB_REF} | cut -d/ -f3)"
