--- a/.github/workflows/static-checks.yaml
+++ b/.github/workflows/static-checks.yaml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         go-version: [1.16.x, 1.17.x]
         os: [ubuntu-20.04]
-    runs-on: ${{ matrix.os }}
+    runs-on: Dell-Ubuntu
     env:
       TRAVIS: "true"
       TRAVIS_BRANCH: ${{ github.base_ref }}
